style: update task list to avoid overflows

--- a/src/components/TasksList/TasksList.module.scss
+++ b/src/components/TasksList/TasksList.module.scss
@@ -2,6 +2,13 @@
     width: 100%;
     height: 86vh;
 
+    overflow: auto;
+}
+
+.action {
+    width: 100%;
+    height: 100%;
+
     display: flex;
     align-items: center;
     justify-content: center;
